/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/8.7/samples
 */

plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    mavenCentral()
    gradlePluginPortal()


    maven {
        url "https://nexus.library.smartgridready.ch/repository/maven-releases/"
    }
    maven {
        url "https://nexus.library.smartgridready.ch/repository/maven-snapshots/"
    }
}

apply plugin: 'java'
apply plugin: 'maven-publish'

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
}

sourceSets {
    main.java.srcDirs = ['src/main/java']
    main.resources.srcDirs = ['src/main/resources']
    test.java.srcDirs = ['src/test/java']
    test.resources.srcDirs = ['src/test/resources']

    integrationTest {
        java.srcDir 'src/test/java'
        resources.srcDir 'src/test/resources'
        compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
        runtimeClasspath += output + compileClasspath
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

test {
    useJUnitPlatform() // needed to run JUnit 5 test with gradle
}

configurations {
    extraLibs.extendsFrom implementation
}

dependencies {
    implementation group: 'com.smartgridready', name: 'sgr-specification', version: '1.1.0-SNAPSHOT'
    implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '4.0.2'
    implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '4.0.5'

    implementation group: 'com.smartgridready', name: 'sgr-driver-api', version: '2.0.0-SNAPSHOT'
    implementation group: 'com.smartgridready', name: 'easymodbus', version: '2.0.0-SNAPSHOT'
    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.1.3'
    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5-fluent', version: '5.1.3'
    implementation group: 'com.hivemq', name: 'hivemq-mqtt-client', version: '1.3.3'

    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.0'
    implementation group: 'io.burt', name: 'jmespath-core', version: '0.5.1'
    implementation group: 'io.burt', name: 'jmespath-jackson', version: '0.5.1'
    implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
    implementation group: 'io.vavr', name: 'vavr', version: '0.10.4'

    implementation group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.1.5'

    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.10'

    implementation "org.mapstruct:mapstruct:1.6.0"
    annotationProcessor "org.mapstruct:mapstruct-processor:1.6.0"

    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.19.0'
    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
    testImplementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j2-impl', version: '2.19.0'

    testImplementation group: 'org.yaml', name: 'snakeyaml', version: '1.27'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.12.0'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.12.0'
    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '5.2.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.10.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'

    testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'
}

test {
    useJUnitPlatform()
    filter {
        excludeTestsMatching("com.smartgridready.communicator.modbus.integrationtest.*")
    }
    // this workaround is required to run some tests under JDKs > 17.
    // otherwise EqualsBuilder.reflectionEquals(...) may fail due to inaccessible fields, e.g. serialVersionUID.
    doFirst {
        jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
    }
}

jar {
    exclude('log4j2.xml')
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

def integrationTestTask = tasks.register('integrationTest', Test) {
    description = 'Runs integration tests.'
    group = 'verification'
    useJUnitPlatform()

    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath

    setTestNameIncludePatterns(['com.smartgridready.communicator.modbus.integrationtest.*'])

    shouldRunAfter(tasks.named('build'))
}


publishing {

    repositories {
        maven {
            name = "Nexus"

            if (rootProject.version.toString().contains('SNAPSHOT')) {
                url = uri("https://nexus.library.smartgridready.ch/repository/maven-snapshots/")
            } else {
                url = uri("https://nexus.library.smartgridready.ch/repository/maven-releases")
            }

            credentials {
                username = findProperty("nexus.username")
                password = findProperty("nexus.password")
            }
        }

    }

    publications {
        mavenJava(MavenPublication) {
            groupId = 'com.smartgridready'
            artifactId = 'sgr-commhandler'

            from components.java
        }
    }
}
